tests/ui/typeck/impl-for-nonexistent-type-error-8767.rs
// https://github.com/rust-lang/rust/issues/8767
impl B { //~ ERROR cannot find type `B` in this scope
}

fn main() {
}
